--- a/gb/22/10/30/n13855972.md
+++ b/gb/22/10/30/n13855972.md
@@ -38,31 +38,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899460.md#1">【未解之谜】预言家珍妮之二 最意外的总统选举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/21/n13889120.md#1">【爱丽话五千】古人白头偕老到底有什么秘诀？如何保持婚姻长久</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903898.md#1">【十字路口】战狼为何流放？北京三维稳迷魂箭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903430.md#1">【热点互动】疫情“东升西降”抗共“东西同亮”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901678.md#1">【十字路口】赵立坚去哪乐？人矿觉醒 中共心惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13901880.md#1">江西货车突然冲进出殡队伍 造成重大伤亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902471.md#1">中共“左棍”司马南染疫 自称被人暴打引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902526.md#1">王祖贤息影19年没工作 曾坦言钱一辈子花不完</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902543.md#1">大陆女星沈月自曝：入行首部戏的片酬被偷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903390.md#1">与林宥嘉结婚6周年 丁文琪铁婚纪念文引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902301.md#1">《阿凡达：水之道》成为史上票房第7大电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902573.md#1">与梁咏琪饰弃女父母 郭富城：角色与我反差大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902197.md#1">世界最快乐国家的心理学家：我们不做3件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901565.md#1">断食可抗癌？三期结肠癌四个月竟痊愈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902782.md#1">美国房价到底将下跌多少？一众专家这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901653.md#1">肠道菌相影响大肠癌 3招养好菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902435.md#1">腰背痛怎么办？症状、原因、治疗一次看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/30/n13855972.htm">二十大后当周中港股重挫 专家析原因及走势</a></p><hr>
